--- a/Rapport/2Appendix/SpeakerTEST.tex
+++ b/Rapport/2Appendix/SpeakerTEST.tex
@@ -170,6 +170,8 @@ The frequency response for all three measurements in test 10 is very similar to 
 \label{fig:FFT1}
 \end{figure} 
 
+The frequency responses test 19, which is the test before the loudspeaker got damaged, shows little signs of any changes in the frequency responses from the previous tests, thus is not possible to determine if the loudspeaker is close the being damaged alone from the frequency responses.
+
 
 %The information captured by the use of procedure in \autoref{sec:SpeakerTestProcedure} is graphed in this section
 
