new files and updates

--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -41,7 +41,7 @@ In this section an analysis of the data extracted from the test DALI Zensor 5 AX
 
 \begin{itemize}
 \item Presentation of the measured data.
-\item Frequency response of the measured vibrations.
+\item Frequency response of the measured data.
 \item Harmonic distortion measured by the microphone and accelerometers.
 \item Back plate hit detection.
 \end{itemize}
