new pictures and updates

--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -1,4 +1,4 @@
-\section{Test of DALI Zensor 5}
+\chapter{Test of DALI Zensor 5}
 This section will go through a test of a loudspeaker to understand if any vibrations in the loudspeaker affect the distortion of the loudspeaker.
 The loudspeaker which will be the basis for the test is the Zensor 5 (as seen on \autoref{fig:dali_zensor5}) given by DALI. A passive speaker has been choosen for the test because the amplifiers in DALI's active speakers are designed not to stress the loudspeaker to its limits and beyond, and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to its limits and beyond.
 
@@ -48,7 +48,7 @@ In this section an analysis of the data extracted from the test DALI Zensor 5 AX
 
 Before analysing the measured the measured data will be presented.
 
-\subsection{Introduction to Measured Data}
+\section{Introduction to Measured Data}
 
 As previously stated there are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure and driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. The remaining data are available on the CD. The first dataset from the test is shown in \autoref{fig:raw1}.
 
@@ -166,7 +166,7 @@ Dataset 19 has the same characteristics as dataset 14, though with a more notice
 \label{fig:raw20}
 \end{figure} 
 
-As seen in \autoref{fig:raw_driver20} the loudspeaker unit breaks down at the mechanical resonance frequency for the driver. The reason to why vibrations on the enclosure and sound pressure are still measured after 25 seconds is because the other loudspeaker unit did not entirely break down. Since the loudspeaker unit broke down at the mechanical driver resonance frequency, it would be relevant to examine if there is any correlation as such.
+As seen in \autoref{fig:raw_driver20} the loudspeaker unit breaks down at the mechanical resonance frequency for the driver. The reason to why vibrations on the enclosure and sound pressure are still presentthe  after 25 seconds is because the other loudspeaker unit did not entirely break down. Since the loudspeaker unit broke down at the mechanical driver resonance frequency, it would be relevant to examine if there is any correlation as such.
 
 
 
