--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -24,6 +24,8 @@ On this loudspeaker you are able to connect via cable or via Bluetooth and chang
 
 \input{1Chapters/1Preanalysis/Speaker.tex}
 
+\input{1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex}
+
 \input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
 
 \input{1Chapters/1Preanalysis/frequency_response.tex}
