change in preana main

--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -59,6 +59,8 @@ The concept consist of a filtering or limitation block, which will be analyzed t
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex}
 
+\input{1Chapters/1Preanalysis/TechnicalAnalysis_Limiter.tex}
+
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_Sensor.tex}
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex}
