En lille smule til speaker

--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -21,10 +21,12 @@ The 112 dB in \autoref{eq:speaker_sensitivty} is added to the sensitivity since 
 
 \subsubsection*{Diaphragm excursion}
 
+When the speaker play music it does so by moving the diaphragm in the driver. This difference in air pressure is then perceived as music. The sound have a specific wavelength according to the frequency. This means that trying to move the air with a speaker cone is only efficient in different frequency area according to the diameter. If a speaker with a small diameter tries to generate a large wavelength the sound would bend and escape around the edges. Hence we need different sizes of speaker cones which is sized according to what area the are going to play.
+
+Next, the driver needs to deliver a sufficient \gls{SPL}. This creates the need for a enough  
 
 
-
-\subsection{Distortion from vibration and impulses}
+\subsection{Distortion from vibration and impulses}\label{subsec:impulses}
 
 A common problem when designing loudspeakers is the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater when the \gls{SPL} from the speaker increase. This problem is solved with different techniques but yield more or less the same outcome, which is stiffening of the enclosure. Some of the techniques for removing vibrations from the enclosure could be:
 \begin{itemize}
