--- a/Rapport/figures/Impulse2.tex
+++ b/Rapport/figures/Impulse2.tex
@@ -16,13 +16,13 @@ every outer x axis line/.append style={black},
 every x tick label/.append style={font=\color{black}},
 xmin=-0.005,
 xmax=0.005,
-xlabel={Time (t)},
+xlabel={Time [s]},
 xmajorgrids,
 every outer y axis line/.append style={black},
 every y tick label/.append style={font=\color{black}},
 ymin=0,
 ymax=600,
-ylabel={X(t)},
+ylabel={x(t)},
 ymajorgrids,
 axis background/.style={fill=white},
 title={Time Domain}
@@ -143,13 +143,13 @@ every outer x axis line/.append style={black},
 every x tick label/.append style={font=\color{black}},
 xmin=0,
 xmax=5000,
-xlabel={Frequency (f)},
+xlabel={Frequency [Hz]},
 xmajorgrids,
 every outer y axis line/.append style={black},
 every y tick label/.append style={font=\color{black}},
 ymin=-250,
 ymax=50,
-ylabel={$|$P(f)$|$},
+ylabel={$|$X(f)$|_{dB}$},
 ymajorgrids,
 axis background/.style={fill=white},
 title={Frequency Domain}
